hopefully all layer overlap issues fixed

--- a/parallax.css
+++ b/parallax.css
@@ -243,7 +243,7 @@ a {
     transform: translateZ(0);
   }
 
-  .parallax__layer--3 {
+  .parallax__layer_left--3 {
     /* scale is 2 because this is full depth of field */
     -webkit-transform: translateZ(-300px) scale(2);
     transform: translateZ(-300px) scale(2);
@@ -254,11 +254,26 @@ a {
     z-index: 2;
   }
 
+  .parallax__layer_right--3 {
+    /* scale is 2 because this is full depth of field */
+    -webkit-transform: translateZ(-300px) scale(2);
+    transform: translateZ(-300px) scale(2);
+    /* border: solid red 1px; */
+    width: 50vw;
+    position: absolute;
+    left: 75vw;
+    z-index: 2;
+  }
+
   .parallax__layer--final {
     /* scale is 2 because this is full depth of field */
     -webkit-transform: translateZ(-300px) scale(2);
     transform: translateZ(-300px) scale(2);
     height: 0vh;
+    width: 50vw;
+    position: absolute;
+    left: 75vw;
+    z-index: 2;
   }
 
   .parallax__layer--4 {
@@ -321,7 +336,7 @@ a {
   text-align: right;
   position: absolute;
   right: 40vw;
-  top: 33vh;
+  top: 32vh;
   width: 20vw;
   /* -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); */
@@ -341,7 +356,7 @@ a {
   align-content: right;
   position: absolute;
   right: 50vw;
-  top: 35vh;
+  top: 32vh;
   width: 40vw;
   /* -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); */
@@ -423,7 +438,7 @@ a {
   text-align: center;
   position: absolute;
   left: 60vw;
-  top: 33vh;
+  top: 30vh;
   /* -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); */
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -442,7 +457,7 @@ a {
   text-align: center;
   position: absolute;
   left: 50vw;
-  top: 33vh;
+  top: 30vh;
   /* -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%); */
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -759,7 +774,7 @@ h6 {
   height: 120px;
   padding: 0px;
   position: relative;
-  left: 50vw;
+  left: 0vw;
   top: 12vh;
   background: linear-gradient(135deg, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, .5) 99%);
   border-bottom-left-radius: 50%;
@@ -777,7 +792,7 @@ h6 {
   height: 120px;
   padding: 0px;
   position: relative;
-  left: 65vw;
+  left: 15vw;
   top: 12vh;
   background: linear-gradient(135deg, rgba(0, 0, 255, .5), rgba(255, 255, 255, .5) 99%);
   border-bottom-left-radius: 50%;
@@ -795,7 +810,7 @@ h6 {
   height: 120px;
   padding: 0px;
   position: relative;
-  left: 80vw;
+  left: 30vw;
   top: -13vh;
   background: linear-gradient(135deg, rgba(0, 0, 255, .5), rgba(255, 255, 255, .5) 99%);
   border-bottom-left-radius: 50%;
